# neugi_swarm

./: .gitignore  .vercelignore  AGENT_SYSTEMS_RESEARCH.md  CHANGELOG.md  CONTEXT_PHILOSOPHY.md  DEPLOY.md  DOMAIN_PLAN.md  HONEST_BENCHMARK.md  INSTALLATION_GUIDE.md  MANIFESTO.md  OLLAMA_EMAIL.txt  README.md  README_ARMY.md  TECHNICAL_SPEC.md  UPGRADES.md  UPGRADE_PLAN.md  VERIFIED_MODELS.py  WIZARD_PLAN.md  company-structure.md  config_template.py  dashboard.html  dashboard_preview.html  docs.html  index.html  install.bat  install.sh  install_simple.sh  learning-curriculum.md  neugi  neugi.bat  neugi.service  neugi_app_integrations.py  neugi_army_v6.py  neugi_army_v8.py  neugi_assistant.py  neugi_cowork.py  neugi_mcp_server.py  neugi_memory_v2.py  neugi_plugins.py  neugi_scheduler.py  (+44 more)
assets/: loop_hero.webm  loop_video.webm
neugi_swarm/: .gitignore  AUDIT_README.md  CHANGELOG.md  NOTES_COMPETITOR_ANALYSIS.md  README.md  config_template.py  dashboard.html  (+63 more)
neugi_swarm_v2/: .gitignore  Dockerfile  README.md  __init__.py  a2a.py  assistant.py  config.py  docker-compose.yml  install.bat  install.sh  llm_multimodal.py  llm_provider.py  neugi  neugi.bat  pyproject.toml  requirements.txt  response_format.py  setup.py  start.bat  start.sh
neugi_swarm_v2/.github/workflows/: ci.yml
neugi_swarm_v2/agents/: __init__.py  agent.py  agent_manager.py  evaluator_optimizer.py  message_bus.py  orchestrator.py  processes.py  typed.py
neugi_swarm_v2/channels/: __init__.py  async_http.py  base.py  channel_manager.py  discord.py  slack.py  telegram.py  whatsapp.py
neugi_swarm_v2/cli/: __init__.py  cli.py  interactive.py  rescue_wizard.py  wizard.py
neugi_swarm_v2/computer_use/: __init__.py  controller.py
neugi_swarm_v2/context/: __init__.py  cache_stability.py  context_injector.py  prompt_assembler.py  token_budget.py
neugi_swarm_v2/dashboard/: __init__.py  api.py  index.html  server.py  websocket.py
neugi_swarm_v2/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MIGRATION.md  PLUGINS.md  SKILLS.md
neugi_swarm_v2/evals/: __init__.py  harness.py
neugi_swarm_v2/gateway/: __init__.py  cron.py  device.py  gateway.py  heartbeat.py  router.py
neugi_swarm_v2/governance/: __init__.py  approval.py  audit.py  budget.py  policy.py
neugi_swarm_v2/learning/: __init__.py  dashboard.py  feedback_loop.py  pattern_tracker.py  skill_generator.py
neugi_swarm_v2/mcp/: __init__.py  mcp_server.py  prompts.py  protocol.py  resources.py  tools.py
neugi_swarm_v2/memory/: __init__.py  dreaming.py  embeddings.py  memory_core.py  scopes.py  scoring.py
neugi_swarm_v2/planning/: __init__.py  chain_of_verification.py  goal_system.py  self_reflection.py  strategic_planner.py  tree_of_thoughts.py
neugi_swarm_v2/plugins/: __init__.py  hooks.py  plugin_loader.py  plugin_registry.py  plugin_sdk.py
neugi_swarm_v2/security/: __init__.py  command_validator.py  exploit_prevention.py  sandbox.py  secret_manager.py  shield_reasoning.py
neugi_swarm_v2/session/: __init__.py  compaction.py  session_manager.py  steering.py  transcript.py
neugi_swarm_v2/skills/: __init__.py  skill_contract.py  skill_loader.py  skill_manager.py  skill_matcher.py  skill_prompt.py
neugi_swarm_v2/tests/: __init__.py  test_agents.py  test_computer_use.py  test_context.py  test_evals.py  test_governance.py  test_memory.py  test_multimodal_a2a.py  test_planning.py  test_rescue_wizard.py  test_response_format.py  test_security.py  test_session.py  test_skills.py  test_tools.py  test_vector_websocket_typed.py  test_web_search.py  test_workflows.py
neugi_swarm_v2/tools/: __init__.py  browser.py  builtins.py  stealth_browser.py  tool_composer.py  tool_executor.py  tool_generator.py  tool_registry.py  web_search.py
neugi_swarm_v2/workflows/: __init__.py  checkpoint.py  executor.py  human_in_loop.py  state_graph.py
(+4 files in other folders)
